Prevent vis labels from being truncated by flow container

--- a/src/flow.styl
+++ b/src/flow.styl
@@ -501,7 +501,7 @@ table
     white-space nowrap
 
 .flow-plot
-  overflow auto
+  overflow visible
   margin-bottom 20px
   table
     margin 10px 0 20px 0
